# app/models/products/product_list.ts
@@ -5,7 +5,8 @@ const Schema = mongoose.Schema
  const ProductListSchema=new Schema({
     _id:{
         type:Number,
-        required:true
+        required:true,
+        ref:'ProductSubImages'
     },
     category_id:{
         type:Number,
